--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,5 +1,4 @@
 version: "2.0"
-
 nlu:
 - intent: greet
   examples: |
@@ -16,7 +15,6 @@ nlu:
     - goodmorning
     - goodevening
     - good afternoon
-
 - intent: goodbye
   examples: |
     - good afternoon
@@ -30,7 +28,6 @@ nlu:
     - see you around
     - bye bye
     - see you later
-
 - intent: affirm
   examples: |
     - yes
@@ -39,7 +36,6 @@ nlu:
     - of course
     - that sounds good
     - correct
-
 - intent: deny
   examples: |
     - no
@@ -49,7 +45,6 @@ nlu:
     - don't like that
     - no way
     - not really
-
 - intent: mood_great
   examples: |
     - perfect
@@ -66,7 +61,6 @@ nlu:
     - so so perfect
     - so good
     - so perfect
-
 - intent: mood_unhappy
   examples: |
     - my day was horrible
@@ -83,10 +77,49 @@ nlu:
     - extremly sad
     - so saad
     - so sad
-
 - intent: bot_challenge
   examples: |
     - are you a bot?
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+- intent: tell_name
+  examples: |
+    - what is your name?
+    - tell me your name
+    - what other call you
+    - what should i call you?
+- intent: my_name
+  examples: |
+    - my name is [gaurav](name)
+    - my name is [rahul](name)
+    - my name is [pooja](name)
+    - [gaurav](name) is my name
+    - [gaurav](name) this side
+    - [gaurav](name)
+    - people call me [gaurav](name)
+
+- intent: roll_number
+  examples: |
+    - my number is [12132699](number)
+    - [12132699](number)
+    - [12132699](number) is my number
+    - my roll number is [12132699](number)
+
+- intent: certificate
+  examples: |
+    - i want my migration certificate or noc
+    - my migration certificate i want
+    - my noc i want
+    - migration certificate
+    - noc
+    - migration certificate or noc
+    - NOC
+    - No Objection Certificate
+
+- intent: play_video
+  examples: |
+    - play the mentioned video
+    - open the url
+    - open the link in browser
+    - show me the video that i asked for
