--- a/domain.yml
+++ b/domain.yml
@@ -1,34 +1,77 @@
-version: "2.0"
-
+version: '2.0'
 intents:
-  - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
+- goodbye
+- affirm
+- deny
+- greet
+- mood_great
+- mood_unhappy
+- bot_challenge
+- tell_name
+- certificate
+- play_video
+- my_name:
+    use_entities:
+    - name
+- roll_number:
+    use_entities:
+    - number
+entities:
+- name
+- number
+slots:
+  name:
+    type: text
+    influence_conversation: true
+  number:
+    type: text
+    influence_conversation: true
+  requested_slot:
+    type: text
+    influence_conversation: false
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
-
+  - text: Hey
   utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
+  - text: 'Here is something to cheer you up:'
+    image: https://i.imgur.com/nGF1K8f.jpg
   utter_did_that_help:
-  - text: "Did that help you?"
-
+  - text: Did that help you?
   utter_happy:
-  - text: "Great, carry on!"
-
+  - text: Great, carry on!
   utter_goodbye:
-  - text: "Bye"
-
+  - text: Bye
   utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  - text: I am a bot, powered by Rasa.
+  utter_name:
+  - text: My name is aura.
+  utter_ask_name:
+  - text: What is your name?
+  utter_ask_number:
+  - text: What is your roll number?
+  utter_certificate:
+  - text: you can get NOC(No Objection Certificate) from this link here:> https://www.jaipuria.ac.in/migration_certificate/
+  utter_thanks:
+  - text: Thanks for providing me the detail
+  utter_thankyou:
+  - text: "Thanks"
+  utter_mood_great:
+  - text: "Perfect nice"
+  utter_details_thanks:
+  - text: "Thanks for providing the given details \nName: {Name},\nRoll Number: {number}"
+actions:
+- action_submit
+- action_video
 
+forms:
+  user_details_form:
+    name:
+    - type: from_entity
+      entity: name
+    number:
+    - type: from_entity
+      entity: number
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
